{
  "version": 4,
  "terraform_version": "1.5.2",
  "serial": 5,
  "lineage": "774d07da-7faa-ccbb-4bda-3caeeab48fb9",
  "resources": [
    {
      "mode": "data",
      "type": "aws_instance",
      "name": "BastionHost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "ami": "ami-022e1a32d3f742bd8",
            "arn": "arn:aws:ec2:us-east-1:481234287216:instance/i-0821647faa92a23ff",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "get_user_data": false,
            "id": "i-0821647faa92a23ff",
            "instance_id": "i-0821647faa92a23ff",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "key_name": "CLSDemo",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface_id": "eni-0f5a17da32c6e876e",
            "placement_partition_number": 0,
            "private_dns": "ip-172-31-120-185.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.120.185",
            "public_dns": "ec2-174-129-176-60.compute-1.amazonaws.com",
            "public_ip": "174.129.176.60",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-06b9a7b0626b37abd",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "bastion-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b49b011820a4466d",
            "tags": {
              "Name": "Bastion Host"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-06d1d8953e8a7faf0"
            ]
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_instance",
      "name": "MongoDBVMv2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "ami": "ami-03868dea313e1d02c",
            "arn": "arn:aws:ec2:us-east-1:481234287216:instance/i-01a73910944f478be",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "get_user_data": false,
            "iam_instance_profile": "EC2OverkillRole",
            "id": "i-01a73910944f478be",
            "instance_id": "i-01a73910944f478be",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "key_name": "CLSDemo",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface_id": "eni-0cfc850151fbe4714",
            "placement_partition_number": 0,
            "private_dns": "ip-172-31-120-16.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.120.16",
            "public_dns": "ec2-44-201-89-176.compute-1.amazonaws.com",
            "public_ip": "44.201.89.176",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 150,
                "tags": {
                  "Name": "MongoDB-EBS-Volume"
                },
                "throughput": 0,
                "volume_id": "vol-07c9caf91b0fd2a13",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "MongoDBSecurityGroup"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b49b011820a4466d",
            "tags": {
              "Name": "MongoDBServer v2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a912a748fd3fd443"
            ]
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_internet_gateway",
      "name": "default-internet-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:481234287216:internet-gateway/igw-e3c07798",
            "attachments": [
              {
                "state": "available",
                "vpc_id": "vpc-ff5b1b85"
              }
            ],
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "default-internet-gateway"
                ]
              }
            ],
            "id": "igw-e3c07798",
            "internet_gateway_id": "igw-e3c07798",
            "owner_id": "481234287216",
            "tags": {
              "Name": "default-internet-gateway"
            }
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_nat_gateway",
      "name": "newnatgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bc04edf4e62ab4fd",
            "association_id": "eipassoc-0657386c11fffb4f8",
            "connectivity_type": "public",
            "id": "nat-00252f79494059378",
            "network_interface_id": "eni-0fd111830d70d48f8",
            "private_ip": "172.31.120.40",
            "public_ip": "18.233.221.201",
            "state": "available",
            "subnet_id": "subnet-0b49b011820a4466d",
            "tags": {
              "Name": "newnatgw"
            },
            "vpc_id": "vpc-ff5b1b85"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_route_table",
      "name": "WizPrivateRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:481234287216:route-table/rtb-01e29a1f59e5e646e",
            "associations": [
              {
                "gateway_id": "",
                "main": false,
                "route_table_association_id": "rtbassoc-05d6e8443a924b409",
                "route_table_id": "rtb-01e29a1f59e5e646e",
                "subnet_id": "subnet-0e181cebc851c5f86"
              },
              {
                "gateway_id": "",
                "main": false,
                "route_table_association_id": "rtbassoc-0a14a6f7bee4638ac",
                "route_table_id": "rtb-01e29a1f59e5e646e",
                "subnet_id": "subnet-05b4848fa221e0d86"
              }
            ],
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "WizPrivateRT"
                ]
              }
            ],
            "gateway_id": null,
            "id": "rtb-01e29a1f59e5e646e",
            "owner_id": "481234287216",
            "route_table_id": "rtb-01e29a1f59e5e646e",
            "routes": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-00252f79494059378",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "subnet_id": "subnet-05b4848fa221e0d86",
            "tags": {
              "Name": "WizPrivateRT"
            },
            "timeouts": null,
            "vpc_id": "vpc-ff5b1b85"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_route_table",
      "name": "WizPublicRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:481234287216:route-table/rtb-05c24b88ba0fef19d",
            "associations": [
              {
                "gateway_id": "",
                "main": false,
                "route_table_association_id": "rtbassoc-0752612f4466d8b70",
                "route_table_id": "rtb-05c24b88ba0fef19d",
                "subnet_id": "subnet-0b49b011820a4466d"
              }
            ],
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "WizPublicRT"
                ]
              }
            ],
            "gateway_id": null,
            "id": "rtb-05c24b88ba0fef19d",
            "owner_id": "481234287216",
            "route_table_id": "rtb-05c24b88ba0fef19d",
            "routes": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-e3c07798",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "subnet_id": "subnet-0b49b011820a4466d",
            "tags": {
              "Name": "WizPublicRT"
            },
            "timeouts": null,
            "vpc_id": "vpc-ff5b1b85"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "WizPrivateSubnetA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:481234287216:subnet/subnet-05b4848fa221e0d86",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "available_ip_address_count": 238,
            "cidr_block": "172.31.121.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05b4848fa221e0d86",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "481234287216",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "WizPrivateSubnetA"
            },
            "vpc_id": "vpc-ff5b1b85"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "WizPrivateSubnetB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:481234287216:subnet/subnet-0e181cebc851c5f86",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "available_ip_address_count": 250,
            "cidr_block": "172.31.122.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e181cebc851c5f86",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "481234287216",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "WizPrivateSubnetB"
            },
            "vpc_id": "vpc-ff5b1b85"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "WizPublicSubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:481234287216:subnet/subnet-0b49b011820a4466d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "available_ip_address_count": 244,
            "cidr_block": "172.31.120.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b49b011820a4466d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "481234287216",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "WizPublicSubnet"
            },
            "vpc_id": "vpc-ff5b1b85"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:481234287216:vpc/vpc-ff5b1b85",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-39732e55",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-4e836e34",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-ff5b1b85",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-d3d21dad",
            "owner_id": "481234287216",
            "tags": {
              "Name": "default_vpc_us_east_1"
            }
          }
        }
      ]
    }
  ]
}